<h4>2.4.2.1 - 02/11/2021</h4>
<strong>Hot Fix</strong>
<ul>
	<li>Contact Form Module: Escape characters in fields</li>
	<li>Post Module: Fix missing images in Safari 13 and below when using Load More or Scroll for pagination</li>
	<li>Post Module: Fix blurry images in Safari when using scroll for pagination and when using some CDNs for images</li>
	<li>When using the <code>fl_enable_shortcode_css_js</code> filter, make sure those shortcodes render in the UI/Edit Mode</li>
	<li>Revert fix for button styling applying to inputs in the Subscribe Module</li>
	<li>Fixed compatibility with ClassicPress</li>
</ul>

<h4>2.4.2 - 01/28/2021</h4>
<strong>Enhancements</strong>
<ul>
	<li>Add compatibility with Assistant .6</li>
	<li>Small changes to the Updates Unavailable message so it will show why updates are unavailable</li>
	<li>Add Alpha/Beta updates opt-in setting in Settings > Tool admin page</li>
</ul>

<strong>Bug Fixes</strong>
<ul>
	<li>Audio Module: Fix issue if audio file URL contains query strings</li>
	<li>Callout Module: Fix border radius not affecting the image</li>
	<li>Callout Module: Fix invalid HTML when using an icon</li>
	<li>Gallery Module: Fix image sequence not being correct when going through images in lightbox</li>
	<li>Heading Module: Fix Typography styling changes not showing as you change in Responsive Editing mode</li>
	<li>Posts Module: Fix content options not toggling to hidden when they should</li>
	<li>Search Module: fix fatal error when using Global Element with AJAX Search Results</li>
	<li>Subscribe Module: Fix button styling applying to placeholder text</li>
	<li>Video Module: Fix video embed code not specified notice not displaying when using connect field connection</li>
	<li>Fix dark mode syntax highlighting</li>
	<li>Fix BB UI icons not showing on Multi-Site subsites when FontAwesome Pro is enabled on the main network site</li>
	<li>Fix PHP8 notices</li>