@@ -3,7 +3,7 @@
 if ( class_exists( 'FLUpdater' ) ) {
 	FLUpdater::add_product(array(
 		'name'    => 'Beaver Builder Plugin (Lite Version)',
-		'version' => '2.4.2.1',
+		'version' => '2.4.2.2',
 		'slug'    => 'bb-plugin',
 		'type'    => 'plugin',
 	));
